# VIBE

./: .env.emotion  .gitignore  LICENSE  LLM.py  NOTICE  README.md  download_models.py  models.lst  pyproject.toml
EmotionRecognition/: EmotionRecognizer.py  __init__.py  models.lst  pyproject.toml
LLM/: LLM.py  download_models.py
ObjectDetection/: ObjectDetector.py  classes.txt  yolo.py
skeleton/: skeleton.py
